--- a/SysPecNSLib/SysPecNSLib.csproj
+++ b/SysPecNSLib/SysPecNSLib.csproj
@@ -10,4 +10,8 @@
     <Compile Remove="Class1.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.4.0" />
+  </ItemGroup>
+
 </Project>
